# UnifiedMedicalDataFormat

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.umdf  example_compressed.umdf   example_fixed.umdf  example_new.umdf  example_rgb.umdf  example_with_orientation.umdf  generate_example  generate_example.cpp  test_clean.umdf  test_debug.umdf  test_debug_detailed.umdf  test_debug_module.umdf  test_dimensions_only.umdf  test_fixed.umdf  test_fixed_dimensions.umdf  test_image_debug.umdf  test_output.umdf  test_png.umdf  test_schema.json  test_summary_mode.cpp  test_umdf_integration.py  test_workflow.umdf  test_zstd_stats.cpp  umdf  umdf_tests  umdf_tool  update_ui.sh
app/importers/: umdf_importer.py
mock_data/: README.md  ct_image_data.json  mri_image_data.json  patient_data.json
pybind/: README.md  build.py  common_bindings.cpp  common_bindings.hpp  json_type_caster.hpp  minimal_test.cpp  pybind11_bridge.cpp  reader_bindings.cpp  reader_bindings.hpp  setup.py  writer_bindings.cpp  writer_bindings.hpp
python_package/: README.md  pyproject.toml  requirements.txt
schemas/dimension/: v1.0.json
schemas/frame/: v1.0.json
schemas/frame/CT/: v1.0.json
schemas/image/: v1.0.json
schemas/image/CT/: v1.0.json
schemas/patient/: dlkfajm.txt  v1.0.json
src/: SchemaResolver.cpp  header.cpp  header.hpp  main.cpp  mockDataLoader.cpp  mockDataLoader.hpp  reader.cpp  reader.hpp  umdfFile.cpp  umdfFile.hpp  writer.cpp  writer.hpp  xref.cpp  xref.hpp
src/AuditTrail/: auditTrail.cpp  auditTrail.hpp
src/DataModule/: ModuleData.hpp  SchemaResolver.hpp  dataField.cpp  dataField.hpp  dataHeader.cpp  dataHeader.hpp  dataModule.cpp  dataModule.hpp  moduleType.cpp  moduleType.hpp  stringBuffer.cpp  stringBuffer.hpp
src/DataModule/Header/: dataHeader.cpp  dataHeader.hpp  imageHeader.cpp  imageHeader.hpp
src/DataModule/Image/: FrameData.cpp  FrameData.hpp  ImageEncoder.cpp  ImageEncoder.hpp  imageData.cpp  imageData.hpp
src/DataModule/Tabular/: tabularData.cpp  tabularData.hpp
src/DataModule/Unknown/: unknownData.cpp  unknownData.hpp
src/Header/: header.cpp  header.hpp
src/Links/: moduleGraph.cpp  moduleGraph.hpp  moduleLink.hpp
src/Patient/: patient.cpp  patient.hpp
src/Utility/: CompressionType.cpp  CompressionType.hpp  ZstdCompressor.hpp  dateTime.cpp  dateTime.hpp  moduleType.cpp  moduleType.hpp  tlvHeader.cpp  tlvHeader.hpp  utils.cpp  utils.hpp  uuid.cpp  uuid.hpp
src/Utility/Compression/: ZstdCompressor.cpp  ZstdCompressor.hpp
src/Utility/Encryption/: EncryptionManager.cpp  EncryptionManager.hpp
src/Xref/: xref.cpp  xref.hpp
tests/: README.md  test_main.cpp
tests/fixtures/: test_schema.json
tests/fixtures/invalid_schemas/: invalid_constraints.json  (+1 more)
tests/integration/: test_endToEnd.cpp  test_fileWorkflow.cpp  test_schemaParsing.cpp
tests/unit/: test_circularReference.cpp  test_dataField.cpp  test_dataModule.cpp  test_dateTime.cpp  test_imageData.cpp  test_imageEncoder.cpp  test_main.cpp  test_pybind.cpp  test_schema.cpp  test_schemaResolver.cpp  test_schemaValidation.cpp
(+20 files in other folders)
